io: Also handle compressed GdkPixdata when loading from GResources

https://bugzilla.gnome.org/show_bug.cgi?id=776105