gdk-pixbuf/gdk-pixbuf-io.c
@@ -1654,19 +1654,18 @@ gdk_pixbuf_new_from_stream (GInputStream  *stream,
 }
 
 GdkPixbuf *
-_gdk_pixbuf_new_from_resource_try_mmap (const char *resource_path)
+_gdk_pixbuf_new_from_resource_try_pixdata (const char *resource_path)
 {
 	guint32 flags;
 	gsize data_size;
 	GBytes *bytes;
 
 G_GNUC_BEGIN_IGNORE_DEPRECATIONS
-	/* We specialize uncompressed GdkPixdata files, making these a reference to the
-	 * compiled-in resource data
+	/* We specialize GdkPixdata files, making these a reference to the
+	 * compiled-in resource data, whether uncompressed and mmap'ed, or
+	 * compressed, and uncompressed on-the-fly.
          */
 	if (g_resources_get_info  (resource_path, 0, &data_size, &flags, NULL) &&
-	    (flags & G_RESOURCE_FLAGS_COMPRESSED) == 0 &&
-	    data_size >= GDK_PIXDATA_HEADER_LENGTH &&
 	    (bytes = g_resources_lookup_data (resource_path, 0, NULL)) != NULL) {
 		GdkPixbuf*pixbuf = NULL;
 		const guint8 *stream = g_bytes_get_data (bytes, NULL);
@@ -1716,7 +1715,7 @@ gdk_pixbuf_new_from_resource (const gchar  *resource_path,
 	GInputStream *stream;
 	GdkPixbuf *pixbuf;
 
-        pixbuf = _gdk_pixbuf_new_from_resource_try_mmap (resource_path);
+        pixbuf = _gdk_pixbuf_new_from_resource_try_pixdata (resource_path);
         if (pixbuf)
                 return pixbuf;
 
